--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "run-dev": "nodemon server.js"
+
   },
   "dependencies": {
     "bootstrap": ">=4.1.2",
